<resources>
    <string name="app_name">App</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">Enter email</string>
    <string name="title_text">MIKVEH POINT</string>
    <string name="greateful_text">Mikveh Finder, find a mikveh near you and order an appointment easily</string>
    <string name="get_started_text">get started</string>
    <string name="password_hint">Enter password</string>
    <string name="or_text">or</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="create_text">CREATE ACCOUNT</string>
    <string name="admin_choose">"Admin "</string>
    <string name="owner_choose">"Mikveh Owner "</string>
    <string name="user_choose">"User"</string>
    <string name="welcome">Welcome!</string>
    <string name="please_select_mikveh_location">Please select Mikveh location</string>
    <string name="select">Select</string>
    <string name="my_profile">My Profile</string>
    <string name="mikveh_owner">Mikveh Owner</string>
    <string name="user">User</string>
    <string name="already_sign_in_click_here">Already sign in? Click here!</string>
    <string name="actions">ACTIONS</string>
    <string-array name="times_array">
        <item>"9:00"</item>
        <item>"10:00"</item>
        <item>"11:00"</item>
        <item>"12:00"</item>
        <item>"13:00"</item>
        <item>"14:00"</item>
        <item>"15:00"</item>
        <item>"16:00"</item>
        <item>"17:00"</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="New_appointments">New appointment</string>
    <string name="choose_date">choose date</string>
    <string name="choose_time">chosse time</string>
</resources>