<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/my_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_date_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />


        <TextView
            android:id="@+id/txt_time_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>