<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/white_wallpaper"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">



        <LinearLayout
            android:id="@+id/acct_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="16dp" />

            <AutoCompleteTextView
                android:id="@+id/email_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mikveh_owner"
            android:layout_marginTop="220dp"
            android:textAlignment="inherit"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginTop="250dp"
            android:textAlignment="inherit"
            android:textSize="16sp" />


        <Button
            android:id="@+id/create_acct_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/suez_one"
            android:text="@string/create_text"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sign_in_option"
            android:layout_width="284dp"
            android:layout_height="52dp"
            android:layout_marginTop="365dp"
            android:layout_marginStart="35dp"
            android:text="@string/already_sign_in_click_here"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>
