<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/white_wallpaper"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true" >


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="18dp"
            android:text="@string/sign_in"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/suez_one"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@color/purple_200"/>

        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#009688"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_acct_button_login"
            android:text="@string/create_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/suez_one"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:backgroundTint="@color/purple_200" />

        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="Forgot password? Click here!"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="16sp" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>