<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/pexels"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/title"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aleo_bold"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35dp" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/water_drop" />

    </LinearLayout>


    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/aleo_bold"
        android:text="@string/get_started_text"
        android:textColor="#2196F3"
        android:textSize="20dp"
        app:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/gratefulText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/aleo_bold"
        android:text="@string/greateful_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />



</LinearLayout>