<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_newapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/New_appointments"
        android:textAlignment='center'
        android:textColor="#87666b"
        android:textSize="34sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_time"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="choose time " />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choose_time"
            android:theme="@style/CustomSpinnerTheme"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_date"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/choose_date" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D1BFBE"
            android:text="Date" />


    </LinearLayout>

    <Button
        android:id="@+id/saveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:backgroundTint="#D1BFBE"
        android:layout_marginTop="30dp"/>

</LinearLayout>